# live_subtitle_tauri

./: LICENSE  README.md  config.html  package-lock.json  package.json  send.html  subtitle.html  vite.config.js
src/: Config.vue  Send.vue  Subtitle.vue  config_window.js  send_window.js  styles.css  subtitle_window.js
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: main.rs
src/components/: Greet.vue  Toast.vue  bilibili_api.js  config.js  cookie.js
